tests/reflect_span_removed_bad.stderr
tests/reflect_span_removed_bad.sl:4:13: error: SL0000: unknown imported symbol
