tests/reflect_span_removed_bad.sl
// Verifies the old reflect span API is not public.
import "reflect"

const OLD = reflect.span_of(OLD)
